<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/Base.Theme.Task1"
    android:layout_height="match_parent"
    tools:context=".register">

    <EditText
        android:id="@+id/password"
        android:layout_height="54dp"
        android:drawableStart="@drawable/baseline_password_24"
        style="@style/inputIcon"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/input"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/email"
        android:background="@drawable/input"
        android:drawableStart="@drawable/baseline_mail_outline_24"
        style="@style/inputIcon"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373"
        android:autofillHints="emailAddress" />

    <Button
        android:id="@+id/login"
        android:width="350dp"
        android:layout_width="wrap_content"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

</androidx.constraintlayout.widget.ConstraintLayout>